Fixed jumbotron so it resizes on mobile

--- a/KYHBPA/KYHBPA/Content/bootstrap.css
+++ b/KYHBPA/KYHBPA/Content/bootstrap.css
@@ -6107,7 +6107,6 @@ a.badge:focus {
     margin-bottom: 30px;
     color: inherit;
     background-color: #368BC1;
-    max-height: 200px;
 }
 
 
